# hermitux-kernel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gettimeofday.sh  tests.sh
arch/aarch64/include/asm/: br_syscall_handler.h  linux_syscalls.h  page.h  tasks.h  time.h  uhyve.h
arch/aarch64/kernel/: br-syscall-handler.c  entry.S  irq.c  tasks.c
arch/aarch64/mm/: memory.c  page.c
arch/x86/: CMakeLists.txt
arch/x86/include/asm/: gdt.h  page.h  processor.h  stddef.h  tasks.h
arch/x86/kernel/: apic.c  boot.asm  entry.asm  gdt.c  getttimeofday.c  irq.c  isrs.c  processor.c  syscall-veneer.s  syscall.c  syscall.h  tasks.c  timer.c
arch/x86/mm/: memory.c  page.c
arch/x86_64/: CMakeLists.txt
arch/x86_64/include/asm/: page.h  tasks.h  uhyve.h
arch/x86_64/kernel/: apic.c  entry.asm  isrs.c  processor.c  signal.c  tasks.c  timer.c
arch/x86_64/mm/: memory.c  page.c
cmake/: HermitCore-Application.cmake  HermitCore-Configuration.cmake  HermitCore-Syscalls.cmake  HermitCore-Utils.cmake  HermitCore.cmake
drivers/net/: mmnif.c
include/hermit/: hermitux_profiler.h  hermitux_syscalls.h  ioctl.h  minifs.h  mmap_areas.h  signal.h  spinlock.h  stddef.h  syscall-config.h  syscall.h  syscall_disabler.h.in  tasks.h  tasks_types.h  time.h  vma.h
include/netinet/: tcp.h
kernel/: hermitux_profiler.c  main.c  minifs.c  syscall.c  tasks.c
kernel/syscalls/: .getprio.c.swp  CMakeLists.txt  accept.c  access.c  arch_prctl.c  bind.c  brk.c  chdir.c  clock_getres.c  clock_gettime.c  clone.c  close.c  connect.c  creat.c  dummy_syscall.c  dup2.c  exit.c  exit_group.c  faccessat.c  fcntl.c  fdatasync.c  fstat.c  fsync.c  ftruncate.c  futex.c  get_robust_list.c  get_ticks.c  getcwd.c  getdents.c  getdents64.c  getegid.c  geteuid.c  getgid.c  gethostname.c  getpeername.c  getpid.c  getppid.c  getprio.c  getpriority.c  getrandom.c  (+88 more)
mm/: malloc.c  vma.c
tools/: CMakeLists.txt  proxy.c  proxy.h  uhyve-elf.c  uhyve-elf.h  uhyve-gdb.c  uhyve-gdb.h  uhyve-msr.h  uhyve-profiler.c  uhyve-profiler.h  uhyve-seccomp.c  uhyve-seccomp.h  uhyve-syscalls.h  uhyve.c  uhyve.h  utils.c
usr/benchmarks/: CMakeLists.txt
usr/benchmarks/bt.b/: CMakeLists.txt
usr/benchmarks/cg.b/: CMakeLists.txt
usr/benchmarks/ep.b/: CMakeLists.txt  res.txt
usr/benchmarks/is.b/: CMakeLists.txt  res.txt
usr/benchmarks/mg.b/: CMakeLists.txt  res.txt
usr/benchmarks/sp.b/: CMakeLists.txt  res.txt
usr/benchmarks/ua.b/: CMakeLists.txt  res.txt
usr/tests/: CMakeLists.txt  hello-minimal.c  hello.c  hermitux-qemu.c  hermitux.c  ioctl.c  linker_aarch64.ld  linker_x86_64.ld  syscall_tester.c  timing.c
